<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_shoestore">Shoe Store</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>

    <string name="Login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="welcome_to">Welcome to your</string>
    <string name="shoe_store">Shoe Store!</string>
    <string name="go_to_instruction">Go to instruction page</string>

    <string name="instruction">Instruction</string>
    <string name="instruction_description">This is the shoestore app that organize you shoe info. In the next screen,
        you can see the list of shoe you store in the application.</string>
    <string name="go_to_shoe_list">Go to shoe list page</string>
    <string name="empty_shoe">There is no shoe to display</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_size">Shoe size: %.1f</string>
    <string name="shoe_description">Description: %s</string>
    <string name="logout">Logout</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="incomplete_info">Please fill all the information</string>

</resources>
