<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/ViewMargin"
            android:textAlignment="center"
            android:text="@string/welcome_to"
            android:textSize="@dimen/text_size"/>

        <TextView
            style="@style/ViewMargin"
            android:textAlignment="center"
            android:text="@string/shoe_store"
            android:textSize="@dimen/text_title"
            android:textColor="@color/black_text_color"/>

        <Button
            android:id="@+id/go_to_instruction_button"
            style="@style/ViewMargin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/go_to_instruction" />

    </LinearLayout>
</layout>