<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".instruction.InstructionFragment">

        <TextView
            style="@style/ViewMargin"
            android:text="@string/instruction"
            android:textSize="@dimen/text_title"
            android:textColor="@color/black_text_color"/>

        <TextView
            style="@style/ViewMargin"
            android:text="@string/instruction_description"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/go_to_shoelist_button"
            style="@style/ViewMargin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/go_to_shoe_list" />


</LinearLayout>

</layout>