<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoedetail.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="38dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="@+id/txt_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_name" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:inputType="text"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/txt_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_company" />

        <EditText
            android:id="@+id/txt_company"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_size" />

        <EditText
            android:id="@+id/txt_size"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="number"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintStart_toStartOf="@+id/txt_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_company" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/desc"
            app:layout_constraintBottom_toBottomOf="@+id/txt_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_desc" />

        <EditText
            android:id="@+id/txt_desc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:text="@={viewModel.shoeDesc}"
            app:layout_constraintStart_toStartOf="@+id/txt_size"
            app:layout_constraintTop_toBottomOf="@+id/txt_size" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_desc" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:text="@android:string/cancel"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/txt_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>